--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,14 @@
-<div style="margin: 100px">
-  <h2 style="background-color: aqua; text-align: center">Todo App</h2>
-  <input type="text" [(ngModel)]="task"><button (click)="add_task()">Add Task</button>
-  <p *ngFor="let item of tasks">&diam; {{ item.task }}
-    <button (click)="delete_task(item.id)">Delete</button>
-  </p>
+<div class="todo-container">
+  <h2 class="title">Todo App</h2>
+  <div class="input-container">
+    <input type="text" [(ngModel)]="task" placeholder="Enter a new task" (keyup.enter)="add_task()">
+    <button class="add-button" (click)="add_task()">Add Task</button>
+  </div>
+  <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+  <div class="task-list">
+    <p *ngFor="let item of tasks" class="task-item" [class.completed]="item.completed">
+      <span (click)="toggle_task(item.id)">&diam; {{ item.task }}</span>
+      <button class="delete-button" (click)="delete_task(item.id)">Delete</button>
+    </p>
+  </div>
 </div>
